# rundown-workers

./: .gitignore  DOCUMENTATION.md  Docs.md  Makefile  README.md  curl_output.txt  enqueue_test.py  enqueue_test_advanced.py  go.mod  go.sum  test_worker.py  worker.py
.github/workflows/: ci.yml
cmd/worker/: main.go
internal/store/: sqlite.go
pkg/engine/: job.go
sdk/: README.md
sdk/go/: README.md  client.go  go.mod  types.go
sdk/nodejs/: README.md
sdk/nodejs/rundown-sdk-node/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sdk/nodejs/rundown-sdk-node/src/: client.ts  enqueue.ts  index.ts  rundown.ts  types.ts  worker.ts
sdk/nodejs/rundown-sdk-node/test-sdk/: enqueue.js  package-lock.json  package.json  worker.js
sdk/python/: README.md  pyproject.toml
sdk/python/rundown_workers/: __init__.py  client.py
tests/: integration_test.go
